--- a/static/index.html
+++ b/static/index.html
@@ -4,26 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Secure Coding – Command Injection</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
   <div class="container">
     <h1>Secure Coding – Command Injection Demo</h1>
 
-    <div class="toggle">
-      <label><input type="radio" name="mode" value="vulnerable" checked> Verwundbare Version</label>
-      <label><input type="radio" name="mode" value="secure"> Sichere Version</label>
-    </div>
+  <div class="toggle">
+    <label><input type="radio" name="mode" value="vulnerable" checked> Verwundbare Version</label>
+    <label><input type="radio" name="mode" value="secure"> Sichere Version</label>
+  </div>
 
-    <input type="text" id="ip" placeholder="z. B. 127.0.0.1 oder 127.0.0.1; ls" />
+  <div class="os-select">
+    <label>Betriebssystem:
+      <select id="os">
+        <option value="linux">Linux/macOS</option>
+        <option value="windows">Windows</option>
+      </select>
+    </label>
+  </div>
+
+  <input type="text" id="ip" placeholder="z. B. 127.0.0.1 oder 127.0.0.1; ls/dir" />
     <button onclick="ping()">Ping senden</button>
 
     <pre id="output"></pre>
 
     <h2>📘 Erklärung</h2>
-    <p><strong>Verwundbare Version:</strong> Der Server führt das Kommando <code>ping -c 1 &lt;ip&gt;</code> direkt aus – ohne Validierung. Ein Angreifer könnte so zusätzliche Shell-Befehle ausführen (z. B. <code>; ls</code>).</p>
-    <p><strong>Sichere Version:</strong> Die Eingabe wird auf gültige IP-Adressen geprüft, und das Kommando wird über <code>subprocess.run()</code> mit Argumenten übergeben – ohne Shell-Zugriff.</p>
+    <p><strong>Verwundbare Version:</strong> Der Server führt ein <code>ping</code>-Kommando direkt in der Shell aus. Je nach gewähltem Betriebssystem lautet es <code>ping -c 1 &lt;ip&gt;</code> (Linux/macOS) oder <code>ping -n 1 &lt;ip&gt;</code> (Windows). Ohne Validierung kann ein Angreifer weitere Befehle anhängen, z. B. <code>; ls</code> bzw. <code>&amp; dir</code>.</p>
+    <p><strong>Sichere Version:</strong> Die Eingabe wird auf gültige IP-Adressen geprüft und das Kommando ohne Shell mit <code>subprocess.run()</code> ausgeführt. Dadurch wird eine Befehlsinjektion verhindert.</p>
   </div>
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 </html>
